# ytvloader

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
