[package]
name = "ytvloader"
version = "0.1.0"
description = "Youtube Video Loader"
authors = ["GeorgeSArnold"]
edition = "2021"

# file structure
[lib]
name = "ytvloader"
path = "src/lib.rs"

[[bin]]
name = "ytvloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-show", "window-hide", "window-unmaximize", "window-close", "window-minimize", "window-unminimize", "window-start-dragging", "window-maximize", "macos-private-api", "fs-remove-file", "shell-open", "path-all", "fs-remove-dir", "fs-copy-file", "dialog-open", "fs-read-file", "fs-read-dir", "fs-write-file", "dialog-save", "fs-rename-file", "fs-create-dir", "fs-exists", "window-set-content-protected"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# file directory > dynamic download path 
dirs = "5.0"

# debug 
tokio = { version = "1.0", features = ["full"] }

# debug 
futures-util = "0.3"
futures = "0.3"

# web
url = "2.2.2"

# http requests
reqwest = { version = "0.11", features = ["json"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
